add click listener on contact form submit button

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/iamtonybologna/html-template#readme",
   "dependencies": {
     "express": "^4.15.2",
+    "morgan": "^1.8.1",
     "nodemon": "^1.11.0"
   }
 }
