--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "emailjs": "^1.0.8",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
+    "nodemailer": "^3.1.8",
     "nodemon": "^1.11.0"
   }
 }
